# dynamic_task_allocation

./: .gitignore  LICENSE.md  README.md  dynamic_allocation.workspace
.catkin_tools/profiles/: profiles.yaml
gazebo_visual/: configure
gazebo_visual/devel/: .catkin  .rosinstall  setup.sh
gazebo_visual/devel/include/nubot_common/: Angle.h  BallHandle.h  BallHandleRequest.h  BallHandleResponse.h  BallInfo.h  BallInfo3d.h  CoachInfo.h  FrontBallInfo.h  MotorInfo.h  ObstaclesInfo.h  OdoInfo.h  OminiVisionInfo.h  PPoint.h  PassCommands.h  Point2d.h  Point3d.h  Pos2d.h  RobotInfo.h  Shoot.h  ShootRequest.h  ShootResponse.h  StrategyInfo.h  TargetInfo.h  VelCmd.h  WorldModelInfo.h  currentCmd.h  simulation_strategy.h
gazebo_visual/devel/include/nubot_gazebo/: NubotGazeboConfig.h
gazebo_visual/src/: CMakeLists.txt
gazebo_visual/src/nubot_common/: CMakeLists.txt
gazebo_visual/src/nubot_common/core/include/nubot/core/: Angle.hpp  Circle.hpp  DPoint.hpp  Line.hpp  PPoint.hpp  core.hpp  time.hpp
gazebo_visual/src/nubot_common/msgs/: Angle.msg  BallInfo.msg  BallInfo3d.msg  CoachInfo.msg  FrontBallInfo.msg  MotionCmd.msg  MotorInfo.msg  ObstaclesInfo.msg  OdoInfo.msg  OminiVisionInfo.msg  PPoint.msg  PassCommands.msg  Pos2d.msg  RobotInfo.msg  StrategyInfo.msg  TargetInfo.msg  VelCmd.msg  WorldModelInfo.msg  currentCmd.msg  simulation_strategy.msg
gazebo_visual/src/nubot_common/srv/: BallHandle.srv  Shoot.srv
gazebo_visual/src/nubot_description/: CMakeLists.txt
gazebo_visual/src/nubot_gazebo/: CMakeLists.txt  package.xml
gazebo_visual/src/nubot_gazebo/config/: global_config.yaml  nubot_gazebo.cfg
gazebo_visual/src/nubot_gazebo/launch/: debug.launch  game_ready.launch
gazebo_visual/src/nubot_gazebo/scripts/: robot_up.sh  set_ball_pos.sh
gazebo_visual/src/nubot_gazebo/src/: nubot_gazebo.cc  nubot_gazebo.hh  vector_angle.hh
gazebo_visual/src/nubot_gazebo/worlds/: robocup15MSL.world
src/DQN/: CMakeLists.txt  package.xml
src/DQN/cfg/: reward_cfg.cfg
src/DQN/srcipts/: RL.py  dqn_Double.py  dqn_Dueling.py  dqn_PER.py  gazebo.py  multi_discrete.py  reinforcement_learning.py  talker.py  train.py  train_test.py
src/DQN/srcipts/logs/: events.out.tfevents.1535634161.DW-MateBook
src/DQN/srv/: GetAction.srv  Taskinfo.msg
src/allocation_common/: CMakeLists.txt  dynamic_allocation.launch  dynamic_allocation.sh  package.xml  spawn_robots.sh
src/allocation_common/include/: Angle.hpp  Common.hpp  Core.hpp  Line.hpp  PPoint.hpp  agent.h  task.h
src/allocation_common/msgs/: Observation.msg  Pose.msg  Taskinfo.msg  Teammateinfo.msg  Twist.msg  allocation2terminal_info.msg  allocation_robot_info.msg  allocation_task_info.msg  drawing_info.msg  gazebo2world_info.msg  gazebo_robot_info.msg  gazebo_task_info.msg  robot2gazebo_info.msg  terminal2DQN_info.msg  terminal2gazebo_info.msg  terminal2robot_info.msg
src/allocation_common/srv/: GetAction.srv  ReturnReward.srv
src/allocation_gazebo/: CMakeLists.txt  package.xml
src/allocation_gazebo/config/: allocation_gazebo.cfg
src/allocation_gazebo/include/: gazebo_info.h  robot_gazebo.h  task_gazebo.h  vector_angle.h  world_gazebo.h
src/allocation_gazebo/src/: robot_gazebo.cpp  task_gazebo.cpp  world_gazebo.cpp
src/control_terminal/: CMakeLists.txt  package.xml
src/control_terminal/include/: maindialog.h  topic_info.h
src/control_terminal/source/: source.qrc
src/control_terminal/src/: main.cpp  maindialog.cpp  maindialog.ui  topic_info.cpp
src/gazebo_description/: CMakeLists.txt  package.xml
src/gazebo_description/meshes/: nubot_frame_collision.dae  target.dae  target_1.dae  task.dae
src/gazebo_description/meshes/nubot_frame/: nubot_frame1.dae  nubot_frame10.dae  nubot_frame2.dae  nubot_frame3.dae  nubot_frame4.dae  nubot_frame5.dae  nubot_frame6.dae  nubot_frame7.dae  nubot_frame8.dae  nubot_frame9.dae
src/gazebo_description/models/Robot0/: model.config  model.sdf
src/gazebo_description/models/Robot1/: model.config  model.sdf
src/gazebo_description/models/Robot2/: model.config  model.sdf
src/gazebo_description/models/Robot3/: model.config  model.sdf
src/gazebo_description/models/Robot4/: model.config  model.sdf
src/gazebo_description/models/Robot5/: model.config  model.sdf
src/gazebo_description/models/Robot6/: model.config  model.sdf
src/gazebo_description/models/Robot7/: model.config  model.sdf
src/gazebo_description/models/Robot8/: model.config  model.sdf
src/gazebo_description/models/Robot9/: model.config  model.sdf
src/gazebo_description/models/Task/: model.config  model.sdf
src/gazebo_description/worlds/: Allocation_Map.world  world.config
src/maddpg/: CMakeLists.txt  package.xml
src/task_allocation/: CMakeLists.txt  package.xml
src/task_allocation/include/: behaviour.h  subtargets.h  task_allocation.h
src/task_allocation/src/: behaviour.cpp  call.cpp  main.cpp  subtargets.cpp  task_allocation.cpp
task_allocation/: configure  dynamic_allocation.sh
task_allocation/devel/: .rosinstall  _setup_util.py  setup.sh
task_allocation/src/: CMakeLists.txt
task_allocation/src/allocation/: CMakeLists.txt
task_allocation/src/allocation/include/: task_allocation.h
task_allocation/src/allocation/launch/: nubot_allocation.launch
task_allocation/src/allocation/msg/: DebugInfo.msg
task_allocation/src/allocation/src/: task_allocation.cpp
task_allocation/src/common/: CMakeLists.txt  package.xml
task_allocation/src/common/include/: Circle.hpp  Core.hpp  DPoint.hpp  Line.hpp  PPoint.hpp
task_allocation/src/common/msgs/: terminal2gazebo_info.msg
task_allocation/src/control_terminal/: CMakeLists.txt  package.xml
task_allocation/src/control_terminal/include/: maindialog.h  topic_info.h
task_allocation/src/control_terminal/src/: main.cpp  maindialog.cpp  maindialog.ui  topic_info.cpp
task_allocation/src/world_model/: CMakeLists.txt  package.xml
task_allocation/src/world_model/include/: agent.h  task.h  world_model.h
task_allocation/src/world_model/launch/: world_model.launch
task_allocation/src/world_model/src/: agent.cpp  main.cpp  task.cpp  world_model.cpp
(+223 files in other folders)
