<?xml version="1.0"?>
<package>
  <name>dqn_ros</name>
  <version>0.0.0</version>
  <description>The DQN package</description>
  <maintainer email="nubot.nudt@outlook.com">nubot</maintainer>
  <author email="weidai_nudt@foxmail.com">weidai</author>
  <license>BSD</license>
  <url type="website">https://github.com/nubot-nudt/nubot_ws</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
