<?xml version="1.0"?>
<package>
  <name>gazebo_description</name>
  <version>0.0.0</version>
  <description>Describes model for Gazebo</description>
  <maintainer email="nubot.nudt@outlook.com">nubot</maintainer>
  <author email="weidai_nudt@foxmail.com">weidai</author>
  <license>BSD</license>
  <url type="website">https://github.com/nubot-nudt/nubot_ws</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>
  
  <run_depend>gazebo_ros</run_depend>
  
  <!-- Important: export the model path to gazebo_ros gazebo -->
	<!-- gazebo_media_path, gazebo_model_path, plugin_path -->
  <export>      
	 <gazebo_ros gazebo_model_path="${prefix}/models/" />
	 <gazebo_ros gazebo_media_path="${prefix}" />
  </export>
</package>
